# home-lab

./: .gitignore  .sops.yaml  .yamllint.yml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
clusters/home-lab/flux-system/: gotk-sync.yaml
kubernetes/: l2-policy.yaml  lb-ip-pool.yaml
kubernetes/apps/cilium/: kustomization.yaml  release.yaml  repository.yaml
kubernetes/apps/nautobot/: kustomization.yaml  kustomizeconfig.yaml  namespace.yaml  nautobot_config.py  release.yaml  repository.yaml  secrets.yaml  values.yaml
kubernetes/clusters/home-lab/: .sops.pub.asc  apps.yaml  infra.yaml
kubernetes/infra/cilium/: kustomization.yaml  release.yaml  repository.yaml
kubernetes/infra/ingress/: kustomization.yaml  namespace.yaml  release.yaml  repository.yaml
kubernetes/infra/networking/: ingress.yaml  kustomization.yaml  l2-policy.yaml  lb-ip-pool.yaml
kubernetes/infra/security/: kustomization.yaml  namespace.yaml  release.yaml  repository.yaml
kubernetes/infra/storage/: ingress.yaml  kustomization.yaml  namespace.yaml  release.yaml  repository.yaml
kubernetes/infra/tools/: kustomization.yaml  namespace.yaml  release.yaml  repository,yaml  repository.yaml
opentofu/: dev-vms.tf  full-clone.tf  k8s-vms.tf  provider.tf  virtual-machines.tf
packer/ubuntu-22_04/: build.pkr.hcl  config.pkr.hcl
packer/ubuntu-22_04/http/: user-data  user-data.enc
packer/ubuntu-24_04/: build.pkr.hcl  config.pkr.hcl
packer/ubuntu-k8s-22_04/: build.pkr.hcl  config.pkr.hcl
packer/ubuntu-k8s-24_04/: build.pkr.hcl
(+14 files in other folders)
